Fixing gettraces.html nav and removing footer

--- a/html/gettraces.html
+++ b/html/gettraces.html
@@ -32,25 +32,25 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href=".html">
+                    <a href="gettraces.html">
                         <i class="now-ui-icons education_atom"></i>
-                        <p>ADC traces</p>
+                        <p>ADC traces (File)</p>
                     </a>
                 </li>
                 <li>
-                    <a href=".html">
+                    <a href="mcapage.html">
                         <i class="now-ui-icons design_app"></i>
                         <p>MCA spectra</p>
                     </a>
                 </li>
                 <li>
-                    <a href="html">
+                    <a href="rspage.html">
                         <i class="now-ui-icons ui-1_bell-53"></i>
                         <p>Run Statistics</p>
                     </a>
                 </li>
                 <li>
-                    <a href="page.html">
+                    <a href="psahistpage.html">
                         <i class="now-ui-icons users_single-02"></i>
                         <p>Pulse-Shape Analysis</p>
                     </a>
@@ -81,7 +81,7 @@
                                     Dygraph.Interaction.DEBUG = true;
                                     let g2 = new Dygraph(
                                         document.getElementById("graphdiv"),
-                                        "../../ADC.csv",
+                                        "../ADC.csv",
                                         {
                                             legend: 'always',
                                             title: ' ',
@@ -120,11 +120,6 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="img-fluid">
-                <img src="../images/Xia_LLC_web_header.jpg">
-            </div>
-        </footer>
     </div>
 </div>
 <!--   Core JS Files   -->
