--- a/html/mcapage.html
+++ b/html/mcapage.html
@@ -1,118 +1,142 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Pixie-Net MCA</title>
+    <title>Pixie-Net - MCA</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
 
-    <script type="text/javascript" src="../js/dygraph-combined.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <style type="text/css">
-        body {
-            background-color: #d0d0d0;
-            font-family: sans-serif;
-        }
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
-        div.box {
-            background-color: #ffffff;
-            width: 500px;
-            margin: 20px auto 50px;
-            padding: 50px;
-            border-radius: 10px;
-            border: 1px solid #808080;
-            box-shadow: 8px 15px 20px #404040
-        }
-
-        img.logo {
-            float: right;
-            margin: -10px 0 0 30px
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 24px
-        }
-
-        h2 {
-            margin-top: 40px;
-            font-size: 20px;
-            font-weight: normal;
-            border-bottom: 1px solid #ff9040
-        }
-
-        p {
-            font-size: 14px
-        }
-
-        a {
-            color: #6060d0;
-            text-decoration: none
-        }
-
-        a:hover {
-            text-decoration: underline
-        }
-    </style>
-
-
+    <!-- Material Kit CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/now-ui-dashboard.css" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
+    <script type="text/javascript" src="../js/plugins/dygraph-combined.js"></script>
 </head>
-
-
 <body>
-<div class="box">
-    <img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
-    <p></p>
-    <p>
-    <h1> Pixie-Net MCA Spectrum </h1></p>
+<div class="wrapper">
+    <div class="sidebar" data-color="blue">
+        <div class="logo">
+            <a href="https://xia.com" class="simple-text logo-mini">
+                <img class="image" src="../images/xialogo.jpg">
+            </a>
+            <a href="../index.html" class="simple-text logo-normal">
+                Pixie-Net
+            </a>
+        </div>
+        <div class="sidebar-wrapper" id="sidebar-wrapper">
+            <ul class="nav">
+                <li>
+                    <a href="gettraces.html">
+                        <i class="now-ui-icons education_atom"></i>
+                        <p>ADC traces (File)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="mcapage.html">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>MCA spectra</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="rspage.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Run Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="psahistpage.html">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Pulse-Shape Analysis</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="daq.html">
+                        <i class="now-ui-icons location_map-big"></i>
+                        <p>DAQ</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-panel">
+        <div class="panel-header">
+            <div class="header text-center">
+                <h2 class="title">MCA Spectrum</h2>
+            </div>
+        </div>
+        <div class="content">
+            <div class="row">
+                <div class="col-lg-10">
+                    <div class="card card-chart">
+                        <div class="card-body">
+                            <div class="chart-area" id="graphdiv">
+                                <canvas></canvas>
+                                <script type="text/javascript">
 
+                                    Dygraph.Interaction.DEBUG = true;
 
-    <div id="graphdiv2" style="width:500px; height:300px;"></div>
-    <script type="text/javascript">
+                                    var g2 = new Dygraph(
+                                        document.getElementById("graphdiv"),
+                                        "../MCA.csv", // path to CSV file
+                                        {
+                                            legend: 'always',
+                                            title: ' ',
+                                            ylabel: 'N Counts',
+                                            xlabel: 'Bin Number'
+                                        }          // options
+                                    );
+                                    var graphs = [g2];
+                                    var scales = {x: false, y: false};
 
-        Dygraph.Interaction.DEBUG = true;
+                                    function setLogScale(axis, val) {
+                                        if (axis === 'y') {
+                                            for (var idx = 0; idx < graphs.length; idx++) {
+                                                graphs[idx].updateOptions({logscale: val});
+                                            }
+                                        } else {
+                                            for (var idx = 0; idx < graphs.length; idx++) {
+                                                graphs[idx].updateOptions({axes: {x: {logscale: val}}});
+                                            }
+                                        }
+                                        scales[axis] = val;
+                                        var text = "y: " + (scales.y ? "log" : "linear") + ", x: " + (scales.x ? "log" : "linear");
+                                        document.getElementById("description").innerText = text;
+                                    }
 
-        var g2 = new Dygraph(
-            document.getElementById("graphdiv2"),
-            "../../MCA.csv", // path to CSV file
-            {
-                legend: 'always',
-                title: ' ',
-                ylabel: 'N Counts',
-                xlabel: 'Bin Number'
-            }          // options
-        );
-        var graphs = [g2];
-        var scales = {x: false, y: false};
-
-        function setLogScale(axis, val) {
-            if (axis === 'y') {
-                for (var idx = 0; idx < graphs.length; idx++) {
-                    graphs[idx].updateOptions({logscale: val});
-                }
-            } else {
-                for (var idx = 0; idx < graphs.length; idx++) {
-                    graphs[idx].updateOptions({axes: {x: {logscale: val}}});
-                }
-            }
-            scales[axis] = val;
-            var text = "y: " + (scales.y ? "log" : "linear") + ", x: " + (scales.x ? "log" : "linear");
-            document.getElementById("description").innerText = text;
-        }
-
-        setLogScale('y', false);
-
-    </script>
-    <input id='ylog' type="button" value="y log scale" onclick="setLogScale('y', true)">
-    <input id='ylinear' type="button" value="y linear scale" onclick="setLogScale('y', false)">
-
-
+                                    setLogScale('y', false);
+                                </script>
+                            </div>
+                        </div>
+                        <input id='ylog' type="button" value="Log Y" onclick="setLogScale('y', true)">
+                        <input id='ylinear' type="button" value="Linear Y"
+                               onclick="setLogScale('y', false)">
+                        <p>Double click to auto zoom.<br>
+                            Click and drag to zoom<br>
+                            Alt click and drag to pan </p>
+                        <div class="card-footer">
+                            <div class="stats">
+                                <i class="now-ui-icons arrows-1_refresh-69"></i> Refresh with F5.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!--   Core JS Files   -->
+<script src="../js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="../js/core/popper.min.js" type="text/javascript"></script>
+<script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
 
-<p>Double click to auto zoom </p>
-<p>Click and drag to zoom </p>
-<p>Alt click and drag to pan </p>
-<p>Use browser button to refresh </p>
-
-
+<!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+<script src="../js/theme/now-ui-dashboard.js" type="text/javascript"></script>
 </body>
 </html>
