--- a/html/run_stats.html
+++ b/html/run_stats.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mcapage.html">
+                    <a href="mca.html">
                         <i class="now-ui-icons design_app"></i>
                         <p>MCA spectra</p>
                     </a>
