--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="html/gettraces.html">
+                    <a href="html/get_traces.html">
                         <i class="now-ui-icons education_atom"></i>
                         <p>ADC traces (File)</p>
                     </a>
                 </li>
                 <li>
-                    <a href="html/mcapage.html">
+                    <a href="html/mca.html">
                         <i class="now-ui-icons design_app"></i>
                         <p>MCA spectra</p>
                     </a>
                 </li>
                 <li>
-                    <a href="html/rspage.html">
+                    <a href="html/run_stats.html">
                         <i class="now-ui-icons ui-1_bell-53"></i>
                         <p>Run Statistics</p>
                     </a>
