Initial commit of DAQ control and organization.

--- a/index.html
+++ b/index.html
@@ -31,33 +31,21 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
             <ul class="nav">
                 <li>
-                    <a href="html/get_traces.html">
+                    <a href="html/setup.html">
                         <i class="now-ui-icons education_atom"></i>
-                        <p>ADC traces (File)</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="html/mca.html">
-                        <i class="now-ui-icons design_app"></i>
-                        <p>MCA spectra</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="html/run_stats.html">
-                        <i class="now-ui-icons ui-1_bell-53"></i>
-                        <p>Run Statistics</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="html/psahistpage.html">
-                        <i class="now-ui-icons users_single-02"></i>
-                        <p>Pulse-Shape Analysis</p>
+                        <p>Setup</p>
                     </a>
                 </li>
                 <li>
                     <a href="html/daq.html">
-                        <i class="now-ui-icons location_map-big"></i>
-                        <p>DAQ</p>
+                        <i class="now-ui-icons design_app"></i>
+                        <p>Run Control</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="html/analysis.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Analysis</p>
                     </a>
                 </li>
             </ul>
@@ -79,10 +67,11 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <p>If you're seeing this page, it means you've successfully setup your Pixie-Net. You can
-                                use these webpages to</p>
+                            <p>If you're seeing this page, it means you've successfully setup your Pixie-Net. You
+                                can use these webpages to</p>
                             <ul>
-                                <li>download data that you've collected,</li>
+                                <li>download data you've collected,</li>
+                                <li>setup the channel parameters,</li>
                                 <li>visualize data on disk,</li>
                                 <li>view run statistics,</li>
                                 <li>and perform some data acquisition functions.</li>
