--- a/html/daq.html
+++ b/html/daq.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<html lang="en">
 
 <head>
     <title>Pixie-Net - DAQ</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
@@ -16,7 +16,8 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/now-ui-dashboard.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
-    <script type="text/javascript" src="../js/core/xia.js"></script>
+    <script src="../js/core/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../js/custom/daq.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <div class="sidebar" data-color="blue">
         <div class="logo">
             <a href="https://xia.com" class="simple-text logo-mini">
-                <img class="image" src="../images/xialogo.jpg">
+                <img class="image" src="../images/xialogo.jpg" alt="XIA LLC Logo">
             </a>
             <a href="../index.html" class="simple-text logo-normal">
                 Pixie-Net
@@ -35,19 +36,19 @@
                 <li>
                     <a href="setup.html">
                         <i class="now-ui-icons education_atom"></i>
-                        <p>Setup</p>
+                        Setup
                     </a>
                 </li>
                 <li>
                     <a href="daq.html">
                         <i class="now-ui-icons design_app"></i>
-                        <p>Run Control</p>
+                        Run Control
                     </a>
                 </li>
                 <li>
                     <a href="analysis.html">
                         <i class="now-ui-icons ui-1_bell-53"></i>
-                        <p>Analysis</p>
+                        Analysis
                     </a>
                 </li>
             </ul>
@@ -65,50 +66,20 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">
-                                <h2>Introduction</h2>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            This page allows users to access the cgi programs that collect data directly from the
-                            Pixie-Net. It's recommended that you <b>DO NOT</b> access these pages if you're running
-                            the acquisition from the command line. You run the risk of causing problems with the
-                            module.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="card-title">
-                                <h2>Utilities</h2>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a href="../../bin/gettraces.cgi?for_web">
-                                        <i class="now-ui-icons media-2_sound-wave"></i> View Live ADC Traces
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-md-offset-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="card-title">
-                                <h2>Controls</h2>
+                                <h2>DAQ Control</h2>
                             </div>
                         </div>
                         <div class="card-body">
                             <input id='read' type="button" value="Read Settings">
-                            <input id='apply' type="button" value="Apply (progfippi)">
+                            <input id='apply' type="button" value="Apply">
                             <input id='start' type="button" value="Start DAQ">
+                            <p></p>
 
                             <div id="myProgress">
                                 <div id="myBar"></div>
                             </div>
 
-                            <table style="width:60%">
+                            <table>
                                 <tr id=row00>
                                     <td>REQ_RUNTIME (s)</td>
                                     <td><input class="field" type="text" size="8" id="runtime" value="0"></td>
@@ -121,6 +92,8 @@
                             <p></p>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-6 col-md-offset-6">
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">
@@ -159,9 +132,31 @@
         </div>
     </div>
 </div>
+
+<script>
+    var i = 0;
+
+    function move() {
+        if (i == 0) {
+            i = 1;
+            var elem = document.getElementById("myBar");
+            var width = 1;
+            var id = setInterval(frame, $("#runtime").val() * 10);
+
+            function frame() {
+                if (width >= 100) {
+                    clearInterval(id);
+                    i = 0;
+                } else {
+                    width++;
+                    elem.style.width = width + "%";
+                }
+            }
+        }
+    }
+</script>
 </body>
 <!--   Core JS Files   -->
-<script src="../js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
 <script src="../js/core/popper.min.js" type="text/javascript"></script>
 <script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
 <script src="../js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
