--- a/html/psahistpage.html
+++ b/html/psahistpage.html
@@ -1,177 +1,221 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Pixie-Net PSA Histogram</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
 
-    <!-- Plotly.js -->
-    <script src="../js/plugins/plotly.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <style type="text/css">
-        body {
-            background-color: #d0d0d0;
-            font-family: sans-serif;
-        }
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
-        div.box {
-            background-color: #ffffff;
-            width: 500px;
-            margin: 20px auto 50px;
-            padding: 50px;
-            border-radius: 10px;
-            border: 1px solid #808080;
-            box-shadow: 8px 15px 20px #404040
-        }
-
-        img.logo {
-            float: right;
-            margin: -10px 0 0 30px
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 24px
-        }
-
-        h2 {
-            margin-top: 40px;
-            font-size: 20px;
-            font-weight: normal;
-            border-bottom: 1px solid #ff9040
-        }
-
-        p {
-            font-size: 14px
-        }
-
-        a {
-            color: #6060d0;
-            text-decoration: none
-        }
-
-        a:hover {
-            text-decoration: underline
-        }
-    </style>
-
+    <!-- Material Kit CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/now-ui-dashboard.css" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.ico"/>
+    <script type="text/javascript" src="../js/plugins/dygraph-combined.js"></script>
+    <script type="text/javascript" src="../js/plugins/plotly.min.js"></script>
 
 </head>
-
-
 <body>
-<div class="box">
-    <img src="../images/Xia_LLC_web_header.jpg" width="500" height="80" border="0"></a>
-    <p></p>
-    <p>
-    <h1> Pixie-Net PSA histograms </h1></p>
-
-
-    <!-- Plotly chart will be drawn inside this DIV -->
-    <div id="Ch0" style="width:480px; height:400px;"></div>
-    <div id="Ch1" style="width:480px; height:400px;"></div>
-    <div id="Ch2" style="width:480px; height:400px;"></div>
-    <div id="Ch3" style="width:480px; height:400px;"></div>
-    <script>
-
-        // define global constants
-        var Nbins = 100;
-
-        Plotly.d3.csv('../../psa2D.csv', function (err, rows) {
-            function unpack(rows, key) {
-                return rows.map(function (row) {
-                    return row[key];
-                });
-            }
-
-            // define the color scheme
-            var psacolor = [
-                ['0.000', 'rgb(245,245,245)'],
-                ['0.002', 'rgb(255,100,100)'],
-                ['0.010', 'rgb(255,  0,  0)'],
-                ['0.020', 'rgb(255, 64,  0)'],
-                ['0.030', 'rgb(255,128,  0)'],
-                ['0.040', 'rgb(255,191,  0)'],
-                ['0.050', 'rgb(255,255,  0)'],
-                ['0.075', 'rgb(191,255,  0)'],
-                ['0.100', 'rgb(128,255,  0)'],
-                ['0.130', 'rgb( 64,255,  0)'],
-                ['0.160', 'rgb(  0,255,  0)'],
-                ['0.200', 'rgb(  0,255, 64)'],
-                ['0.250', 'rgb(  0,255,128)'],
-                ['0.300', 'rgb(  0,255,191)'],
-                ['0.360', 'rgb(  0,191,255)'],
-                ['0.420', 'rgb(  0,128,255)'],
-                ['0.480', 'rgb(  0, 64,255)'],
-                ['0.540', 'rgb(  0,  0,255)'],
-                ['0.700', 'rgb( 64,  0,255)'],
-                ['0.750', 'rgb(128,  0,255)'],
-                ['0.850', 'rgb(191,  0,255)'],
-                ['0.980', 'rgb(255,  0,255)'],
-                ['1.000', 'rgb(  0,  0,  0)'],
-            ];
-
-            var z_data0 = [];
-            for (i = 0; i < Nbins; i++) {
-                z_data0.push(unpack(rows, i));
-            }
-            var z_data1 = [];
-            for (i = Nbins; i < Nbins * 2; i++) {
-                z_data1.push(unpack(rows, i));
-            }
-            var z_data2 = [];
-            for (i = Nbins * 2; i < Nbins * 3; i++) {
-                z_data2.push(unpack(rows, i));
-            }
-            var z_data3 = [];
-            for (i = Nbins * 3; i < Nbins * 4; i++) {
-                z_data3.push(unpack(rows, i));
-            }
-            var data0 = [{
-                z: z_data0,
-                colorscale: psacolor,
-                type: 'heatmap'
-            }];
-            var data1 = [{
-                z: z_data1,
-                colorscale: psacolor,
-                type: 'heatmap'
-            }];
-            var data2 = [{
-                z: z_data2,
-                colorscale: psacolor,
-                type: 'heatmap'
-            }];
-            var data3 = [{
-                z: z_data3,
-                colorscale: psacolor,
-                type: 'heatmap'
-            }];
-
-
-            var layout = {
-                autosize: true,
-                margin: {t: 20},
-                xaxis: {title: 'Energy'},
-                yaxis: {title: 'PSA value'}
-            };
-
-            Plotly.newPlot('Ch0', data0, layout);
-            Plotly.newPlot('Ch1', data1, layout);
-            Plotly.newPlot('Ch2', data2, layout);
-            Plotly.newPlot('Ch3', data3, layout);
-
-        });
-
-    </script>
-
-
+<div class="wrapper">
+    <div class="sidebar" data-color="blue">
+        <div class="logo">
+            <a href="https://xia.com" class="simple-text logo-mini">
+                <img class="image" src="../images/xialogo.jpg">
+            </a>
+            <a href="../index.html" class="simple-text logo-normal">
+                Pixie-Net
+            </a>
+        </div>
+        <div class="sidebar-wrapper" id="sidebar-wrapper">
+            <ul class="nav">
+                <li>
+                    <a href="get_traces.html">
+                        <i class="now-ui-icons education_atom"></i>
+                        <p>ADC traces (File)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="mca.html">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>MCA spectra</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="run_stats.html">
+                        <i class="now-ui-icons ui-1_bell-53"></i>
+                        <p>Run Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="psahistpage.html">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Pulse-Shape Analysis</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="daq.html">
+                        <i class="now-ui-icons location_map-big"></i>
+                        <p>DAQ</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-panel">
+        <div class="panel-header">
+            <div class="header text-center">
+                <h2 class="title">Pulse-Shape Analysis</h2>
+            </div>
+        </div>
+        <div class="content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Channel 0</h2>
+                            </div>
+                        </div>
+                        <div class="card-body" id="channel0">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Channel 1</h2>
+                            </div>
+                        </div>
+                        <div class="card-body" id="channel1">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-md-offset-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Channel 2</h2>
+                            </div>
+                        </div>
+                        <div class="card-body" id="channel2">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h2>Channel 3</h2>
+                            </div>
+                        </div>
+                        <div class="card-body" id="channel3">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script>
+    // define global constants
+    var Nbins = 100;
 
-<p>Use browser button to refresh </p>
-<p>Hover over plot to see plot options </p>
+    Plotly.d3.csv('../psa2D.csv', function (err, rows) {
+        function unpack(rows, key) {
+            return rows.map(function (row) {
+                return row[key];
+            });
+        }
 
+        // define the color scheme
+        var psacolor = [
+            ['0.000', 'rgb(245,245,245)'],
+            ['0.002', 'rgb(255,100,100)'],
+            ['0.010', 'rgb(255,  0,  0)'],
+            ['0.020', 'rgb(255, 64,  0)'],
+            ['0.030', 'rgb(255,128,  0)'],
+            ['0.040', 'rgb(255,191,  0)'],
+            ['0.050', 'rgb(255,255,  0)'],
+            ['0.075', 'rgb(191,255,  0)'],
+            ['0.100', 'rgb(128,255,  0)'],
+            ['0.130', 'rgb( 64,255,  0)'],
+            ['0.160', 'rgb(  0,255,  0)'],
+            ['0.200', 'rgb(  0,255, 64)'],
+            ['0.250', 'rgb(  0,255,128)'],
+            ['0.300', 'rgb(  0,255,191)'],
+            ['0.360', 'rgb(  0,191,255)'],
+            ['0.420', 'rgb(  0,128,255)'],
+            ['0.480', 'rgb(  0, 64,255)'],
+            ['0.540', 'rgb(  0,  0,255)'],
+            ['0.700', 'rgb( 64,  0,255)'],
+            ['0.750', 'rgb(128,  0,255)'],
+            ['0.850', 'rgb(191,  0,255)'],
+            ['0.980', 'rgb(255,  0,255)'],
+            ['1.000', 'rgb(  0,  0,  0)'],
+        ];
 
+        var z_data0 = [];
+        for (i = 0; i < Nbins; i++) {
+            z_data0.push(unpack(rows, i));
+        }
+        var z_data1 = [];
+        for (i = Nbins; i < Nbins * 2; i++) {
+            z_data1.push(unpack(rows, i));
+        }
+        var z_data2 = [];
+        for (i = Nbins * 2; i < Nbins * 3; i++) {
+            z_data2.push(unpack(rows, i));
+        }
+        var z_data3 = [];
+        for (i = Nbins * 3; i < Nbins * 4; i++) {
+            z_data3.push(unpack(rows, i));
+        }
+        var data0 = [{
+            z: z_data0,
+            colorscale: psacolor,
+            type: 'heatmap'
+        }];
+        var data1 = [{
+            z: z_data1,
+            colorscale: psacolor,
+            type: 'heatmap'
+        }];
+        var data2 = [{
+            z: z_data2,
+            colorscale: psacolor,
+            type: 'heatmap'
+        }];
+        var data3 = [{
+            z: z_data3,
+            colorscale: psacolor,
+            type: 'heatmap'
+        }];
+
+        var layout = {
+            autosize: true,
+            margin: {t: 20},
+            xaxis: {title: 'Energy'},
+            yaxis: {title: 'PSA value'}
+        };
+
+        Plotly.newPlot('channel0', data0, layout);
+        Plotly.newPlot('channel1', data1, layout);
+        Plotly.newPlot('channel2', data2, layout);
+        Plotly.newPlot('channel3', data3, layout);
+
+    });
+</script>
+
+<!--   Core JS Files   -->
+<script src="../js/core/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script src="../js/core/popper.min.js" type="text/javascript"></script>
+<script src="../js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/core/perfect-scrollbar.min.js" type="text/javascript"></script>
+
+<!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+<script src="../js/theme/now-ui-dashboard.js" type="text/javascript"></script>
 </body>
 </html>
 
